# elk

./: .gitignore  CITATION.cff  LICENSE.rst  README.md  Tobin's research Library.bib  changelog.md  environment.yml  lightcurves_pipeline.py  paper.bib  paper.md  requirements.txt  setup.cfg  setup.py  stripped_bib.bib
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-problem.md  feature_request.md  question.md
.github/workflows/: joss_compile.yml  perform_tests.yml
Ensemble_LC/: Detailed and Simple Pipeline to Calculate Variability Statistics from Light Curves.ipynb  Detailed and Simple Pipeline to Generate All Sector Lightcurves.ipynb  Detailed and Simple Pipeline to get Light curves.ipynb  README.md  README.txt  lightcurves_pipeline.py  pipeline_class.py  test_class.py  variable_stats.py
docs/: conf.py  index.rst
docs/_static/: custom.css
docs/modules/: ensemble.rst  lightcurve.rst  plot.rst  stats.rst  utils.rst
docs/pages/: cite.rst  feedback.rst  getting_started.ipynb  install.rst  modules.rst  tutorials.rst
docs/tutorials/: diagnostic_gif.ipynb  example_tutorial.ipynb  plotting.ipynb  reading_in.ipynb  statistics.ipynb
docs/tutorials/Corrected_LCs/: NGC 419_lc_18.fits  NGC 419_lc_24.fits  NGC 419output_table.fits
elk/: __init__.py  ensemble.py  lightcurve.py  pipeline.py  plot.py  stats.py  utils.py
elk/tests/: test_class.ipynb  test_class.py  test_ensemble.py  test_gif.ipynb  test_gif.py  test_lightcurve.py  test_save_load.py  test_stats.py
tutorials/: Detailed and Simple Pipeline to get Light curves.ipynb
(+1 files in other folders)
