[metadata]
name = elk
url = https://github.com/tobin-wainer/TESS_Cluster_Project/
author = Tobin Wainer, Tom Wagg
author_email = tobinw@uw.edu
license = MIT
license_files = LICENSE
description = # TODO
long_description = file: README.md
long_description_content_type = text/markdown

# NOTE: any changes in the requirements must also be reflected in
#   - requirements.txt
#   - environment.yml

[options]
python_requires = >=3.10
packages = find: 
install_requires = 
    python
    numpy
    pip
    matplotlib
    astropy
    scipy
    jupyter
    jupyterlab
    ipython
    pandas
    tqdm
    h5py
    lightkurve
    tables

[options.package_data]
* = *.npy, *.npz

[options.extras_require]
test = 
    pytest
docs = 
    sphinx
    matplotlib

[tool:pytest]
addopts = --cov-report xml:cov.xml --cov elk
testpaths = "elk"

[coverage:run]
omit =
    elk/tests/*
    elk/__init__.py
    setup.py
concurrency = multiprocessing

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # don't worry about showing plots
    plt.show()

[flake8]
max-line-length = 110
exclude = **__init__.py
extend-ignore = E402